--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ paper.runMemoryGb = 8
 paper.runDisableWatchdog = true
 
 # Volt - Change below values
-group = org.plazmamc.volt
-brandKey = plazmamc:volt
-brandName = Volt
+group = org.game.fubaoforever.nocites.radioactive
+brandKey = GAME-CLI-SRV-DEV:RadioActive
+brandName = RadioActive
 providerName = PlazmaMC
 providerRepo = PlazmaMC/Volt
 
