--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,12 @@ org.gradle.jvmargs = -Xmx4G -Dfile.encoding=UTF-8 -Dgraal.CompilerConfiguration=
 paper.runMemoryGb = 8
 paper.runDisableWatchdog = true
 
-# Volt - Change below values
+# For FU BAO 🐼!
 group = org.game.fubaoforever.nocites.radioactive
 brandKey = GAME-CLI-SRV-DEV:RadioActive
 brandName = RadioActive
-providerName = PlazmaMC
-providerRepo = PlazmaMC/Volt
+providerName = Radioactive
+providerRepo = GAME-CLI-SRV-DEV
 
 # Volt - You must change below values when you upgrade the Minecraft.
 version = 1.20.6-R0.1-SNAPSHOT
