--- a/.github/workflows/instantbuild.yml
+++ b/.github/workflows/instantbuild.yml
@@ -22,5 +22,12 @@ jobs:
           java-version: '17'
       - name: Configure Git User Details
         run: git config --global user.email "actions@github.com" && git config --global user.name "Github Actions"
-      - name: Apply Patches
-        run: ./install.bat
+      - name: Instant
+        run: ./Install.bat
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: NogyangSpigotInstaller
+          path: build/libs/
+          
+    
