--- a/.github/workflows/instantbuild.yml
+++ b/.github/workflows/instantbuild.yml
@@ -22,8 +22,10 @@ jobs:
           java-version: '17'
       - name: Configure Git User Details
         run: git config --global user.email "actions@github.com" && git config --global user.name "Github Actions"
-      - name: Instant
-        run: ./Install.bat
+      - name: Instant patch
+        run: ./gradlew applypatches 
+      - name: Build
+        run: ./gradlew CreateReobfLeavesclipJar
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
