--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ paper.runDisableWatchdog = true
 
 # For FU BAO 🐼!
 group = org.game.fubaoforever.nocites.radioactive
-brandKey = GAME-CLI-SRV-DEV:RadioActive
+brandKey = game-cli-srv-dev:radioactive
 brandName = RadioActive
 providerName = Radioactive
 providerRepo = GAME-CLI-SRV-DEV
