--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -28,7 +28,13 @@ jobs:
       - name: Update upstream
         if: steps.check.outputs.needs == 'true'
         run: ./gradlew updateUpstream
-
+      
+      - name: Rebuild Patches
+        if: steps.check.outputs.paper == 'false' || steps.check.outputs.purpur == 'false'
+        run: | 
+          cd ${{ env.MAIN }}
+          ./gradlew --no-rebuild --stacktrace rebuildPatches
+          
       - name: Apply patches
         if: steps.check.outputs.needs == 'true'
         run: ./gradlew applyPatches
