--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ paper.runDisableWatchdog = true
 # For FU BAO 🐼!
 group = org.game.fubaoforever.nocites.radioactive
 brandKey = game-cli-srv-dev:radioactive
-brandName = RadioActive
+brandName = SangSang
 providerName = Radioactive
 providerRepo = GAME-CLI-SRV-DEV
 
