--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
         run: ./gradlew applyPatches --stacktrace
 
       - name: Build
-        run: ./gradlew build -x radioactive-api:test -x radioactive-server:test --stacktrace
+        run: ./gradlew build -x sangsang-api:test -x sangsang-server:test --stacktrace
 
       - name: Create Reobf Jar
         run: ./gradlew createReobfLeavesclipJar -x sangsang-api:test -x sangsang-server:test --stacktrace
